<resources>
    <string name="app_name">ProjectX</string>
    <string name="toolbar_title">ProjectX</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_customers">Customers</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="action_search">Search</string>
    <string name="content_description_letter">letter</string>
    <string name="please_wait">please wait</string>
    <string name="loading_customers">loading cutomers</string>
    <string name="click_to_add_a_new_customer">Click \'+\' to add a new customer</string>
    <string name="new_customer">New Customer</string>
    <string name="customer_first_name">First Name</string>
    <string name="customer_email">Email</string>
    <string name="customer_last_name">Last Name</string>
    <string name="customer_address">Address</string>
    <string name="customer_balance">Balance</string>
    <string name="customer_company_name">Company Name</string>
    <string name="customer_phone_number">Phone Number</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="action_edit">edit</string>
    <string name="action_delete">delete</string>
    <string name="update_customer">Update Customer</string>
    <string name="update_customer_button_text">Update Customer</string>
    <string name="customer_deleted_successfully">Customer deleted successfully.</string>
    <string name="customer_added_successfully">Customer added successfully.</string>
    <string name="customer_updated_successfully">Customer updated successfully.</string>
    <string name="there_must_be_some_problem">There must be some problem. Try again later.</string>
    <string name="please_enter_first_name">Please enter first name.</string>
    <string name="please_enter_phone_number">Please enter phone number.</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number.</string>
    <string name="customer_debit">Debit</string>
    <string name="customer_credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="drawer_item_section_header">User Settings</string>
    <string name="drawer_item_signout">Logout</string>
    <string name="random_customer">Random Customer</string>
    <string name="new_product">New Product</string>
    <string name="random_product">Random Product</string>
    <string name="new_wholesaler">New Wholesaler</string>
    <string name="random_wholesaler">Random Wholesaler</string>
    <string name="add_product">Add Product</string>
    <string name="find_customer">Find Customer</string>
    <string name="there_are_no_products_please_click_on_new_product_to_add_new_product">There are no products.Please click on NEW PRODUCT to add new product.</string>
    <string name="there_are_no_customers_please_click_on_new_customer_to_add_new_customer">There are no customers.Please click on NEW CUSTOMER to add new customer.</string>
    <string name="find_product">Find Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Code</string>
    <string name="company">Company</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="price_per_piece">Price per Piece</string>
    <string name="update_product">Update Product</string>
    <string name="please_enter_a_valid_quantity">Please enter a valid quantity.</string>
    <string name="please_enter_available_quantity">Please enter available quantity.</string>
    <string name="please_enter_a_valid_price">Please enter a valid price.</string>
    <string name="please_enter_price_per_piece">Please enter price per piece.</string>
    <string name="please_enter_product_name">Please enter product name.</string>
    <string name="please_enter_a_valid_credit_value">Please enter a valid credit value.</string>
    <string name="please_enter_a_valid_debit_value">Please enter a valid debit value.</string>
    <string name="product_added_successfully">Product added successfully</string>
    <string name="product_updated_successfully">Product updated successfully.</string>
    <string name="add_new_product">Add New Product</string>

</resources>
