<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projectx.itgo.com.activities.ActivityAddProduct">

    <include
        android:id="@+id/add_product_toolbar"
        layout="@layout/toolbar" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/add_product_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_product_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/add_product_edit_text_margin_top"
                android:hint="@string/product_name" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_product_code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_product_name_edit_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/add_product_edit_text_margin_top"
                android:hint="@string/product_code" />

            <LinearLayout
                android:id="@+id/first_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_product_code_edit_text"
                android:layout_marginTop="@dimen/add_product_edit_text_margin_top"
                android:orientation="horizontal">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/add_product_company_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:hint="@string/company"
                    app:met_floatingLabel="normal" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/add_product_model_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:hint="@string/model"
                    app:met_floatingLabel="normal" />
            </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_product_type_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_linear_layout"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/add_product_edit_text_margin_top"
                android:hint="@string/type" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_product_quantity_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_product_type_edit_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/add_product_edit_text_margin_top"
                android:hint="@string/available_quantity"
                android:inputType="number" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/add_product_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_product_quantity_edit_text"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/add_product_edit_text_margin_top"
                android:hint="@string/price_per_piece"
                android:inputType="number" />


            <Button
                android:id="@+id/add_new_product_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_product_price_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/add_product_button_margin_top"
                android:background="@color/colorPrimary"
                android:text="@string/add_new_product"
                android:textColor="@color/md_white_1000" />

        </RelativeLayout>


    </ScrollView>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/add_product_activity_progress_wheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:matProg_barColor="#5588FF"
        app:matProg_progressIndeterminate="true" />

</RelativeLayout>
