<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projectx.itgo.com.activities.ActivityLogin">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/user_username_edit_text"
        app:met_floatingLabel="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:hint="@string/username" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/user_password_edit_text"
        app:met_floatingLabel="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_username_edit_text"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/user_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_password_edit_text"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/md_white_1000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_login_button"
        android:layout_marginTop="15dp"
        android:text="No account yet? Signup"
        android:textAlignment="center" />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/login_activity_progress_wheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:matProg_barColor="#5588FF"
        app:matProg_progressIndeterminate="true" />

</RelativeLayout>
