<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projectx.itgo.com.activities.ActivityAddCustomer">

    <include
        android:id="@+id/add_customer_toolbar"
        layout="@layout/toolbar" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/my_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_customer_toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/add_customer_toolbar"
            android:scrollbars="vertical">
            <FrameLayout
                android:id="@+id/rootLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/choose_contact_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@drawable/ic_contacts_white_18dp"
                    app:fabSize="normal" />
            </FrameLayout>
            <TextView
                android:id="@+id/choose_from_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rootLayout"
                android:gravity="center"
                android:textSize="20sp"
                android:paddingBottom="20dp"
                android:text="Choose from Contacts"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_blue_dark"
                android:id="@+id/divider3"
                android:layout_alignBottom="@id/choose_from_contacts" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/first_linear_layout"
            android:layout_below="@id/divider3"
            android:orientation="horizontal">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/customer_first_name_edit_text_margin_right"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/customer_edit_text_margin_top"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:hint="@string/customer_first_name"
                app:met_floatingLabel="normal" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/customer_first_name_edit_text"
                android:layout_marginTop="@dimen/customer_edit_text_margin_top"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/customer_last_name"
                app:met_floatingLabel="normal" />
        </LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_company_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_linear_layout"
                android:paddingBottom="25dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/customer_edit_text_margin_top"
                android:hint="@string/customer_company_name"
                app:met_floatingLabel="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:id="@+id/divider1"
                android:layout_alignBottom="@id/customer_company_name_edit_text" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:inputType="number"
                android:layout_marginTop="@dimen/customer_edit_text_margin_top"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:hint="@string/customer_phone_number"
                app:met_floatingLabel="normal"
                app:met_maxCharacters="10" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_below="@id/customer_phone_number_edit_text"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:hint="@string/customer_email"
                app:met_floatingLabel="normal" />


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_email_edit_text"
                android:layout_marginTop="@dimen/customer_edit_text_margin_top"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:paddingBottom="25dp"
                android:hint="@string/customer_address"
                app:met_floatingLabel="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:id="@+id/divider2"
                android:layout_alignBottom="@id/customer_address_edit_text" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_balance_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/customer_address_edit_text"
                android:inputType="number"
                android:layout_marginTop="@dimen/customer_edit_text_margin_top"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:hint="@string/customer_balance"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/add_new_customer_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_balance_edit_text"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/customer_add_customer_button_margin_top"
                android:text="@string/add_new_customer" />

        </RelativeLayout>
    </ScrollView>
    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:matProg_barColor="#5588FF"
        app:matProg_progressIndeterminate="true" />


</RelativeLayout>
