<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="projectx.itgo.com.activities.ActivityFindProduct">

    <include layout="@layout/toolbar"
        android:id="@+id/find_product_toolbar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/find_product_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/find_product_toolbar"
        android:layout_above="@+id/find_product_linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/find_product_linearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/random_product"
            android:id="@+id/find_product_random_button"
            android:textColor="@color/md_white_1000"
            android:background="@color/colorPrimary"
            android:layout_marginRight="1dp"/>

        .
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/find_product_new_button"
            android:text="@string/new_product"
            android:background="@color/colorPrimary"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/find_product_progress_wheel"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:matProg_barColor="#5588FF"
        app:matProg_progressIndeterminate="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/there_are_no_products_please_click_on_new_product_to_add_new_product"
        android:textAlignment="center"
        android:id="@+id/find_product_empty_text_view"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
